# remo

./: .gitignore  Cargo.toml  Dockerfile  cargo.toml  docker-compose.yml  dockerfile  readme.md
crates/remo-agent/: Cargo.toml
crates/remo-agent/src/: lib.rs
crates/remo-contract/: Cargo.toml
crates/remo-contract/src/: lib.rs
crates/remo-contract/tests/: agent_spec_catalog.rs  agent_spec_patch.rs  builtin_seed.rs  config_record.rs  contract_integration.rs
crates/remo-doctest/: Cargo.toml
crates/remo-doctest/examples/: README.md  agent_spec.rs  ai_sdk_payloads.rs  cancellation.rs  deferred_tool.rs  effect_spec.rs  error_variants.rs  event_sink.rs  http_app_builder.rs  mcp_server_spec.rs  plugin_registrar.rs  remote_endpoint.rs  run_lifecycle.rs  scheduled_action.rs  skill_spec.rs  state_command.rs  state_key.rs  thread_store_trait.rs  tool_basic.rs  tool_resume.rs  typed_tool.rs
crates/remo-doctest/src/: lib.rs
crates/remo-eval/: Cargo.toml  baseline.ndjson
crates/remo-eval/fixtures/: 01_simple_qa.json  02_phrase_recall.json  03_token_budget.json  04_excludes_secret.json  05_error_path.json
crates/remo-eval/src/: curate.rs  dataset.rs  eval_run.rs  eval_run_test.rs  expectation.rs  fixture.rs  judge.rs  lib.rs  outcome.rs  outcome_test.rs  replay.rs  report.rs  report_test.rs  runtime_replayer.rs  runtime_replayer_test.rs  score.rs  score_test.rs  test_support.rs
crates/remo-eval/tests/: eval_integration.rs  judge_tensorzero.rs
crates/remo-ext-agnes/: Cargo.toml
crates/remo-ext-agnes/src/: config.rs  lib.rs  plugin.rs
crates/remo-ext-deferred-tools/: Cargo.toml
crates/remo-ext-deferred-tools/src/: config.rs  lib.rs  policy.rs  state.rs  tool_search.rs
crates/remo-ext-evaluator/: Cargo.toml
crates/remo-ext-evaluator/src/: config.rs  lib.rs  plugin.rs  state.rs  tools.rs
crates/remo-ext-generative-ui/: Cargo.toml
crates/remo-ext-generative-ui/src/: run.rs  sink.rs
crates/remo-ext-mcp/: Cargo.toml
crates/remo-ext-mcp/src/: config.rs  error.rs  id_mapping.rs  lib.rs  manager.rs  plugin.rs  progress.rs  sampling.rs  transport.rs
crates/remo-ext-mcp/tests/: e2e_server_everything.rs  mcp_tests.rs
crates/remo-ext-media-gen/: Cargo.toml
crates/remo-ext-media-gen/src/: config.rs  lib.rs  plugin.rs  tools.rs
crates/remo-ext-memory/: Cargo.toml
crates/remo-ext-memory/src/: config.rs  hooks.rs  lib.rs  long_term.rs  plugin.rs  retrieval.rs  state.rs  tools.rs
crates/remo-ext-multimodal/: Cargo.toml
crates/remo-ext-multimodal/src/: config.rs  file_parser.rs  hooks.rs  lib.rs  modality.rs  plugin.rs  tools.rs  vision.rs
crates/remo-ext-notifications/: Cargo.toml
crates/remo-ext-notifications/src/: config.rs  lib.rs  plugin.rs  tools.rs
crates/remo-ext-observability/: Cargo.toml
crates/remo-ext-observability/src/: attribution_fills_tests.rs  batching.rs  composite.rs  genai_backfill_tests.rs  lib.rs  lib_test.rs  metrics.rs  metrics_attribution_test.rs  metrics_test.rs  otel.rs  otel_attribution_test.rs  otel_config.rs  otel_test.rs  persistent.rs  persistent_adapter_test.rs  persistent_test.rs  prometheus.rs  runtime_stats.rs  runtime_stats_test.rs  sampling.rs  sink.rs  stats.rs  wiring.rs
crates/remo-ext-observability/tests/: observability_integration.rs  wiring_integration.rs
crates/remo-ext-opencode/: Cargo.toml
crates/remo-ext-opencode/src/: config.rs  lib.rs  model_discovery.rs  plugin.rs  tools.rs
crates/remo-ext-permission/: Cargo.toml
crates/remo-ext-permission/src/: actions.rs  config.rs  lib.rs  matcher.rs  rules.rs  state.rs
crates/remo-ext-permission/tests/: permission_tests.rs  skill_elevation_tests.rs
crates/remo-ext-rag/: Cargo.toml
crates/remo-ext-rag/src/: chunker.rs  config.rs  hooks.rs  lib.rs  pipeline.rs  plugin.rs  retriever.rs  state.rs  tools.rs
crates/remo-ext-reminder/: Cargo.toml
crates/remo-ext-reminder/src/: config.rs  lib.rs  output_matcher.rs  rule.rs
crates/remo-ext-reminder/tests/: reminder_tests.rs
crates/remo-ext-sandbox/: Cargo.toml
crates/remo-ext-sandbox/src/: config.rs  hook.rs  lib.rs  plugin.rs  policy.rs  process_sandbox.rs  provider.rs
crates/remo-ext-search/: Cargo.toml
crates/remo-ext-search/src/: config.rs  lib.rs  plugin.rs  tools.rs
crates/remo-ext-skills/: Cargo.toml
crates/remo-ext-skills/src/: config_skill.rs  embedded.rs  lib.rs  materialize.rs  mcp_bridge.rs  registry.rs  skill.rs  skill_md.rs  state.rs  tool_match.rs  tools.rs  visibility.rs
crates/remo-ext-skills/tests/: skills_integration.rs  tool_state_tests.rs
crates/remo-ext-voice/: Cargo.toml
crates/remo-ext-voice/src/: config.rs  lib.rs  plugin.rs  tools.rs
crates/remo-ext-workflow/: Cargo.toml
crates/remo-ext-workflow/src/: config.rs  dsl.rs  executor.rs  hooks.rs  lib.rs  nodes.rs  plugin.rs  state.rs  tools.rs
crates/remo-ext-xfyun/: Cargo.toml
crates/remo-ext-xfyun/src/: config.rs  lib.rs  plugin.rs  tools.rs
crates/remo-protocol-a2a/: Cargo.toml
crates/remo-protocol-a2a/src/: lib.rs
crates/remo-runtime/: Cargo.toml
crates/remo-runtime-contract/: Cargo.toml
crates/remo-runtime-contract/src/: agent_spec_patch.rs  builtin_seed.rs  cancellation.rs  config_loader.rs  config_record.rs  identity.rs  lib.rs  periodic_refresh.rs  secret.rs  skill_allowed_tools.rs  skill_spec.rs  skill_spec_patch.rs  thread.rs  time.rs  tool_spec.rs  tool_spec_patch.rs
crates/remo-runtime-contract/tests/: agent_spec_catalog.rs  agent_spec_patch.rs  builtin_seed.rs  config_record.rs  contract_integration.rs
crates/remo-runtime/src/: builder.rs  builder_tests.rs  cancellation.rs  checkpoint_store.rs  delegation.rs  error.rs  event_buffer.rs  inbox.rs  lib.rs  retry.rs  run.rs
crates/remo-runtime/tests/: background_task_lifecycle.rs  builder_commit_coordinator.rs  child_agent_seed.rs  event_lifecycle.rs  llm_retry_regressions.rs  profile_store_integration.rs  public_api_compat.rs  public_api_compat_extended.rs  shared_state_integration.rs  tool_side_effects.rs
crates/remo-server/: Cargo.toml
crates/remo-server-contract/: Cargo.toml
crates/remo-server-contract/src/: lib.rs
(+589 files in other folders)
