[package]
name = "remo-ext-evaluator"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "LLM-as-judge online evaluation extension for the Remo AI Agent framework"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["artificial-intelligence"]

[dependencies]
remo-runtime-contract = { workspace = true }
remo-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
