[package]
name = "remo-ext-mcp"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "Model Context Protocol (MCP) client plugin for Remo"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["artificial-intelligence", "api-bindings", "network-programming"]

[dependencies]
remo-runtime-contract = { workspace = true }
remo-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "process", "time"] }
reqwest = { workspace = true }
futures = { workspace = true }
mcp = { workspace = true, features = ["client"] }
nix = { version = "0.29", default-features = false, features = ["signal"] }

[dev-dependencies]
remo-runtime = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "time"] }

[lints]
workspace = true
