[package]
name = "remo-ext-opencode"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "OpenCode CLI integration and free model discovery for Remo AI Agent framework"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["artificial-intelligence", "command-line-tools"]

[dependencies]
remo-runtime-contract = { workspace = true }
remo-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["process"] }
reqwest = { workspace = true, features = ["json"] }
tracing = { workspace = true }

[lints]
workspace = true
