[package]
name = "remo-ext-rag"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "RAG pipeline extension with document ingestion, chunking, keyword-based retrieval, and context injection"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["artificial-intelligence", "information-retrieval"]

[dependencies]
remo-runtime-contract = { workspace = true }
remo-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
