[package]
name = "remo-ext-reminder"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "Rule-based context message injection plugin for Remo"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["artificial-intelligence"]

[dependencies]
remo-runtime-contract = { workspace = true }
remo-runtime = { workspace = true }
remo-tool-pattern = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
remo-runtime = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true }

[lints]
workspace = true
