[package]
name = "remo-ext-workflow"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "DAG-based workflow execution engine extension for Remo AI Agent framework"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["artificial-intelligence"]

[dependencies]
remo-runtime-contract = { workspace = true }
remo-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }

[lints]
workspace = true
