[package]
name = "remo-ext-xfyun"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "讯飞星辰 MaaS 平台集成 — OpenAI 兼容的星火大模型推理服务"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["artificial-intelligence"]

[dependencies]
remo-runtime-contract = { workspace = true }
remo-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tracing = { workspace = true }

[lints]
workspace = true
