[package]
name = "remo-protocol-a2a"
version.workspace = true
readme = "../../README.md"
edition.workspace = true
description = "A2A v1.0 protocol wire types and helpers for Remo"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["artificial-intelligence", "api-bindings"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
